--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/express-session": "^1.15.8",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "ngx-soap": "^0.2.2-beta4",
     "rxjs": "^5.5.6",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
